[package]
name = "gto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
app = ["dep:serde"]

[dependencies]
poker = { path = "../poker" }
thiserror = "1.0.39"
rayon = "1.7.0"
serde = { version = "1.0.130", features = ["derive"], optional = true }